@@ -1,3 +1,9 @@
+[19-december-2003]
+A macOSX packager is needed! If you know how to create a macOSX package from the source distribution of stellarium 0.5.2, please help me! The aim is to obtain a Stellarium-0.5.2.dmg file similiar to the one available for version 0.4.9 in the download section.
+
+[27-august-2003]
+The next version I am working on will have features designed for use in a planetarium dome : fisheye projection with a field of view up to 360 degree, use of fisheye textures mapped to make landscapes, automatic zoom on selected objects, a text interface etc... The reason of that is an american company called Digitalis Education which is paying me for adding such cool features (that of course everybody will benefit as it is opensource). You just have to wait a few more weeks and it will finally be released! I know that I say that in every post, but each time, the release date is closer... ;)
+
 [24-june-2003]
 In one month i will graduate from my university! I am therefore looking for a real job. If you need a good engineer for a scientific job, I am interested. I'm even more interested if you are located in Finland. Please have a look at my resume, and (hopefully!) contact me.
 
